--- a/styles1.css
+++ b/styles1.css
@@ -14,7 +14,7 @@
 				*{
 				font-family: Arial, Verdana, sans-serif;
 				font-size: 18px;
-				color: ;
+				color: #FFFFFF;
 				text-align:;
 				}
 				
